--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,103 @@
+absl-py==2.1.0
 accelerate==1.1.1
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.2
 aiosignal==1.3.1
 altair==5.4.1
 annotated-types==0.7.0
+anyascii==0.3.2
 async-timeout==4.0.3
 audioread==3.0.1
 blinker==1.9.0
+blis==0.7.11
 cachetools==5.5.0
+catalogue==2.0.10
 click==8.1.7
+cloudpathlib==0.20.0
+confection==0.1.5
+contourpy==1.3.1
+coqpit-config==0.1.1
+coqui-tts==0.25.1
+coqui-tts-trainer==0.2.0
+cycler==0.12.1
+cymem==2.0.10
+Cython==3.0.11
+dateparser==1.1.8
 distro==1.9.0
+docopt==0.6.2
+einops==0.8.0
+encodec==0.1.1
 ffmpeg==1.4
 filelock==3.16.1
+fonttools==4.55.3
 frozenlist==1.5.0
 fsspec==2024.10.0
+fugashi==1.4.0
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.1.1
-hpack==4.0.0
+grpcio==1.68.1
+gruut==2.4.0
+gruut-ipa==0.13.0
+gruut_lang_de==2.0.1
+gruut_lang_en==2.0.1
+gruut_lang_es==2.0.1
+gruut_lang_fr==2.0.2
+hangul-romanize==0.1.0
+httpx==0.27.2
 huggingface-hub==0.26.2
+inflect==7.4.0
+jaconv==0.4.0
 jiter==0.7.1
 joblib==1.4.2
+jsonlines==1.2.0
 jsonpatch==1.33
+kiwisolver==1.4.7
 langchain==0.3.7
 langchain-core==0.3.19
 langchain-openai==0.2.8
 langchain-text-splitters==0.3.2
+langcodes==3.5.0
 langsmith==0.1.143
+language_data==1.3.0
 lazy_loader==0.4
 librosa==0.10.2.post1
 llvmlite==0.43.0
+marisa-trie==1.2.1
+Markdown==3.7
 markdown-it-py==3.0.0
+matplotlib==3.9.3
 mdurl==0.1.2
+mojimoji==0.0.13
+monotonic-alignment-search==0.1.1
+more-itertools==10.5.0
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
+murmurhash==1.0.11
 narwhals==1.13.5
 networkx==3.2.1
+num2words==0.5.13
 numba==0.60.0
 numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 openai==1.54.4
 orjson==3.10.11
 pandas==2.2.3
 pillow==11.0.0
 pooch==1.8.2
+preshed==3.0.9
 propcache==0.2.0
 protobuf==5.28.3
 pyarrow==18.0.0
@@ -51,6 +105,9 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
 pydub==0.25.1
+pyparsing==3.2.0
+pysbd==0.3.4
+python-crfsuite==0.9.11
 python-dotenv==1.0.1
 regex==2024.11.6
 requests-toolbelt==1.0.0
@@ -58,21 +115,44 @@ rich==13.9.4
 safetensors==0.4.5
 scikit-learn==1.5.2
 scipy==1.14.1
+shellingham==1.5.4
+smart-open==7.0.5
 smmap==5.0.1
 soundfile==0.12.1
+sox==1.5.0
 soxr==0.5.0.post1
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.36
+srsly==2.5.0
 streamlit==1.40.1
 streamlit-audiorecorder==0.0.5
+SudachiDict-core==20241021
+SudachiPy==0.6.9
 sympy==1.13.1
 tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+thinc==8.2.5
 threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.20.3
 toml==0.10.2
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
 tqdm==4.67.0
 transformers==4.46.2
+triton==3.1.0
+typeguard==4.4.1
+typer==0.15.1
 tzdata==2024.2
+tzlocal==5.2
+wasabi==1.1.3
 watchdog==6.0.0
+weasel==0.4.1
+Werkzeug==3.1.3
+wrapt==1.17.0
 yarl==1.17.1
 zstandard==0.23.0
